k8s/manifests/go-app-static-full.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: go-app-static
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-static-deploy
  namespace: go-app-static
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-app-static
  template:
    metadata:
      labels:
        app: go-app-static
    spec:
      containers:
        - name: go-web-app
          image: ghcr.io/gesatessa/go_cicd:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: ghcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: go-app-static-svc
  namespace: go-app-static
spec:
  type: NodePort
  selector:
    app: go-app-static
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
